--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head> 
     <meta charset="UTF-8" />
     <title>Making your first Phaser 3 Game :: Working File</title>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
+    <!-- <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script> -->
+    <script src="node_modules/phaser/dist/phaser.js"></script>
     <style type="text/css">
         body {
             margin: 0;
@@ -43,7 +44,9 @@
 
     function create ()
     {
-        this.add.image( 400 , 300 , 'sky' );
+        // this.add.image( 400 , 300 , 'sky' );
+        this.add.image( 0 , 0 , 'sky' ).setOrigin( 0 , 0 );
+        this.add.image( 400 , 300 , 'star' );
     }
 
     function update ()
