--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
         type: Phaser.AUTO,
         width: 800,
         height: 600,
+        physics: {
+            default: "arcade",
+            arcade: {
+                gravity: { y: 300 },
+                debug: false
+            }
+        },
         scene: {
             preload: preload,
             create: create,
@@ -31,7 +38,7 @@
     function preload ()
     {
         this.load.image( 'bomb'     , 'assets/bomb.png' );
-        this.load.image( 'platform' , 'assets/platform.png' );
+        this.load.image( 'ground'   , 'assets/platform.png' );
         this.load.image( 'sky'      , 'assets/sky.png' );
         this.load.image( 'star'     , 'assets/star.png' );
 
@@ -42,11 +49,47 @@
         );
     }
 
+    var platforms; 
+
     function create ()
     {
-        // this.add.image( 400 , 300 , 'sky' );
+        // BACKGROUND
         this.add.image( 0 , 0 , 'sky' ).setOrigin( 0 , 0 );
-        this.add.image( 400 , 300 , 'star' );
+
+        // PLATFORMS
+        platforms = this.physics.add.staticGroup();
+        platforms.create( 400 , 568 , 'ground' ).setScale(2).refreshBody();        
+        platforms.create(600, 400, 'ground');
+        platforms.create(50, 260, 'ground');
+        platforms.create(720, 220, 'ground');
+        
+        // PLAYERS 
+        player = this.physics.add.sprite( 100 , 450 , 'dude' );
+        player.setBounce( 0.2 );
+        player.setCollideWorldBounds(true);
+
+        this.anims.create({
+            key: 'left',
+            frames: this.anims.generateFrameNumbers( 'dude' , { start: 0 , end: 3 }),
+            frameRate: 10, 
+            repeat: -1,
+        });
+
+        this.anims.create({
+            key: 'turn',
+            frames: [{ key: 'dude' , frame: 4 }],
+            frameRate: 20,
+        });
+
+        this.anims.create({
+            key: 'right',
+            frames: this.anims.generateFrameNumbers( 'dude' , { start: 5, end: 8 }),
+            frameRate: 10,
+            repeat: -1,
+        });
+
+        // STAR 1
+        this.add.image( 400 , 300 , 'star' );   
     }
 
     function update ()
